--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title>kiwi-client</title>
+    <link rel="stylesheet" href="https://maxcdn.icons8.com/fonts/line-awesome/1.1/css/line-awesome-font-awesome.min.css">
+    <style>
+      body {
+        overflow-y: scroll;
+      }
+    </style>
   </head>
   <body>
     <div id="app"></div>
